# yish

./: README.md  bun.lockb  package.json
.github/: main.yml
.github/workflows/: main.yml
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  convert_audio.rs  main.rs
