[package]
name = "yish"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5.0"
dirs = "5.0.0"
chrono = "0.4.0"
yomiage = { git = "https://github.com/laprusk/yomiage", rev = "7476fcc", features = ["serde_support"] }
vvcapi = { git = "https://github.com/laprusk/voicevox_rs", rev = "cb6395f" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
